[editor] IJPL-254585 fix warnings in ImmediatePainter
GitOrigin-RevId: 36a636d23847f2e44ec66fd4f296353844a64a60